[core,popover2] Fix heading colors in tooltips in dark mode (#4832)

--- a/packages/popover2/src/_common.scss
+++ b/packages/popover2/src/_common.scss
@@ -56,6 +56,13 @@ $pt-dark-tooltip2-box-shadow: $pt-dark-popover-box-shadow !default;
 
   .#{$ns}-popover2-content {
     background: $background-color;
+  }
+
+  // Some popovers (like tooltips) invert their foreground/background colors relative
+  // to what we expect for the theme. In those cases, we need to override global typography
+  // styles to get the right colors.
+  .#{$ns}-popover2-content,
+  .#{$ns}-heading {
     color: $text-color;
   }
 
